Added influxdb_backend to packages

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "statsd",
   "description": "A simple, lightweight network daemon to collect metrics over UDP",
   "author": "Etsy",
-  "license" : "MIT",
+  "license": "MIT",
   "scripts": {
     "test": "./run_tests.sh",
     "start": "node stats.js config.js",
@@ -15,7 +15,8 @@
   },
   "version": "0.7.2",
   "dependencies": {
-    "generic-pool": "2.2.0"
+    "generic-pool": "2.2.0",
+    "statsd-influxdb-backend": "git+https://git@github.com/wevanscfi/statsd-influxdb-backend.git"
   },
   "devDependencies": {
     "nodeunit": "0.9.x",
@@ -23,12 +24,14 @@
     "temp": "0.4.x"
   },
   "optionalDependencies": {
-    "modern-syslog":"1.1.2",
-    "hashring":"3.2.0",
+    "modern-syslog": "1.1.2",
+    "hashring": "3.2.0",
     "winser": "=0.1.6"
   },
   "engines": {
-    "node" : ">=0.8"
+    "node": ">=0.8"
   },
-  "bin": { "statsd": "./bin/statsd" }
+  "bin": {
+    "statsd": "./bin/statsd"
+  }
 }
